--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,11 +6,10 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
     // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
     
-    meta(name='description', content='The explorer for the Ethereum blockchain')
-    meta(name='author', content='bitfly')
-    meta(name='keywords', content='ethereum, explorer, blockchain, etherchain, cryptocurrency, cryptocurrencies, bitcoin')
+    meta(name='description', content='The explorer for the Root Chain blockchain')
+    meta(name='keywords', content='rootchain, explorer, blockchain, ethereum, etherchain, cryptocurrency, cryptocurrencies, bitcoin')
         
-    title Etherchain Light
+    title Root Chain Explorer
     
     link(href=config.bootstrapUrl, rel="stylesheet", crossorigin="anonymous")    
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -25,7 +24,7 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
           |  
-          a.navbar-brand(href='/') Etherchain Light
+          a.navbar-brand(href='/') Root Chain
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -48,7 +47,7 @@ html(lang="en")
               
           form.navbar-form.navbar-right(action="/search", method="POST")
             .form-group
-              input.form-control#search(type='text', placeholder='Block / Tx / Account', name='search')
+              input.form-control#search(type='text', placeholder='Search in Root Chain...', name='search')
             |  
             button.btn.btn-default(type='submit') Submit
     .container      
@@ -64,5 +63,5 @@ html(lang="en")
       hr
       footer
         p  
-          a(href="https://github.com/gobitfly/etherchain-light") Etherchain Light
+          a(href="https://github.com/gobitfly/etherchain-light") Root Chain
           |  | #{nodeStatus.version} | #{nodeStatus.nbrPeers} Peers connected
