--- a/views/account.pug
+++ b/views/account.pug
@@ -8,7 +8,7 @@ block content
   table.table
     tr
       td Balance:
-      td #{ethformatter(account.balance)}
+      td !{ethformatter(account.balance)}
     if account.name
       tr
         td Name:
@@ -53,7 +53,7 @@ block content
                     td New Coins
                     td 
                       a(href="/account/" + trace.action.author) #{nameformatter.format(trace.action.author)}
-                    td #{ethformatter(trace.action.value)}
+                    td !{ethformatter(trace.action.value)}
                 else if trace.type !== "reward"
                   tr            
                     td 
@@ -74,7 +74,7 @@ block content
                         a(href="/account/" + trace.action.from) #{nameformatter.format(trace.action.from)}
                       td 
                         a(href="/account/" + trace.action.to) #{nameformatter.format(trace.action.to)}
-                      td #{ethformatter(trace.action.value)}
+                      td !{ethformatter(trace.action.value)}
                     else if trace.type === "create"
                       td
                         if trace.action.from === account.address
@@ -85,7 +85,7 @@ block content
                         a(href="/account/" + trace.action.from) #{nameformatter.format(trace.action.from)}
                       td
                         a(href="/account/" + trace.result.address) #{nameformatter.format(trace.result.address)}
-                      td #{ethformatter(trace.action.value)}
+                      td !{ethformatter(trace.action.value)}
                     else if trace.type === "suicide"
                       td
                         if trace.action.address === account.address
@@ -96,7 +96,7 @@ block content
                         a(href="/account/" + trace.action.address) #{nameformatter.format(trace.action.address)}
                       td
                         a(href="/account/" + trace.action.refundAddress) #{nameformatter.format(trace.action.refundAddress)}
-                      td #{ethformatter(trace.action.balance)}
+                      td !{ethformatter(trace.action.balance)}
       
       if account.isContract
         #code.tab-pane(role='tabpanel')
