--- a/views/accounts.pug
+++ b/views/accounts.pug
@@ -14,5 +14,5 @@ block content
           td 
             a(href="/account/" + account.address) #{nameformatter.format(account.address)}
           td #{account.type}
-          td #{ethformatter(account.balance)}
+          td !{ethformatter(account.balance)}
   a.btn.btn-default(href="/accounts/" + lastAccount) Next Page
