--- a/views/block.pug
+++ b/views/block.pug
@@ -79,7 +79,7 @@ block content
                 a(href="/account/" + tx.to) #{nameformatter.format(tx.to)}
               else
                 | New Contract
-            td #{ethformatter(tx.value)}
+            td !{ethformatter(tx.value)}
           for trace in tx.traces
             tr
               td.text-right
@@ -92,16 +92,16 @@ block content
                   a(href="/account/" + trace.action.from) #{nameformatter.format(trace.action.from)}
                 td 
                   a(href="/account/" + trace.action.to) #{nameformatter.format(trace.action.to)}
-                td #{ethformatter(trace.action.value)}
+                td !{ethformatter(trace.action.value)}
               else if trace.type === "create"
                 td
                   a(href="/account/" + trace.action.from) #{nameformatter.format(trace.action.from)}
                 td
                   a(href="/account/" + trace.result.address) #{nameformatter.format(trace.result.address)}
-                td #{ethformatter(trace.action.value)}
+                td !{ethformatter(trace.action.value)}
               else if trace.type === "suicide"
                 td
                   a(href="/account/" + trace.action.address) #{nameformatter.format(trace.action.address)}
                 td
                   a(href="/account/" + trace.action.refundAddress) #{nameformatter.format(trace.action.refundAddress)}
-                td #{ethformatter(trace.action.balance)}
+                td !{ethformatter(trace.action.balance)}
