--- a/views/index.pug
+++ b/views/index.pug
@@ -43,4 +43,4 @@ block content
                 a(href="/account/" + tx.to) #{nameformatter.format(tx.to)}
               else
                 | New Contract
-            td #{ethformatter(tx.value)}
+            td !{ethformatter(tx.value)}
