--- a/views/block.pug
+++ b/views/block.pug
@@ -4,11 +4,11 @@ block content
   br
   .row
     .col-md-1
-      a.btn.btn-primary(href="/block/" + (block.number - 1), role="button") Previous
+      a.btn.btn-default(href="/block/" + (block.number - 1), role="button") Previous
     .col-md-10.text-center
-      h3 Block #{block.number}
+      h3.block-title Block #{block.number}
     .col-md-1
-      a.btn.btn-primary(href="/block/" + (block.number + 1), role="button") Next
+      a.btn.btn-default(href="/block/" + (block.number + 1), role="button") Next
 
   table.table
     tr
@@ -24,22 +24,22 @@ block content
         a(href="/account/" + block.author) #{nameformatter.format(block.author)}
     tr
       td Gas Limit:
-      td #{numeral(block.gasLimit).format()}
+      td !{roundNumber(block.gasLimit)}
     tr
       td Gas Used:
-      td #{numeral(block.gasUsed).format()}
+      td !{roundNumber(block.gasUsed)}
     tr
       td Difficulty:
-      td #{numeral(block.difficulty).format()}
+      td !{roundNumber(block.difficulty)}
     tr
       td Total Difficulty:
-      td #{numeral(block.totalDifficulty).format()}
+      td !{roundNumber(block.totalDifficulty)}
     tr
       td Timestamp:
       td #{moment.unix(block.timestamp).format()} (#{moment.unix(block.timestamp).fromNow()})
     tr
       td Size:
-      td #{numeral(block.size).format()}
+      td !{roundNumber(block.size)}
     tr
       td Transactions:
       td #{block.transactions.length}
@@ -71,7 +71,7 @@ block content
               if tx.error
                 span(style="color: red", data-toggle="tooltip", data-placement="left", title=tx.error).glyphicon.glyphicon-warning-sign
               a(href="/tx/" + tx.hash)  #{tx.hash.substr(0, 10)}...
-            td Tx
+            td Txn
             td
               a(href="/account/" + tx.from) #{nameformatter.format(tx.from)}
             td
