--- a/views/index.pug
+++ b/views/index.pug
@@ -6,20 +6,23 @@ block content
     thead
       tr
         th Number
-        th Miner
-        th Timestamp
-        th # Tx
-        th # Uncles
+        th.text-center Hash
+        th.text-center Miner
+        th.text-center Timestamp
+        th.text-center # Txns
+        th.text-center # Uncles
     tbody
       for block in blocks
         tr
           td
             a(href="/block/" + block.number) #{block.number}
-          td 
+          td.text-center
+            a(href="/block/" + block.number) #{block.hash.substr(0, 12)}...
+          td.text-center 
             a(href="/account/" + block.author) #{nameformatter.format(block.author)}
-          td #{moment.unix(block.timestamp).format()}
-          td #{block.transactions.length}
-          td #{block.uncles.length}
+          td.text-center #{moment.unix(block.timestamp).format('MMMM D YYYY H:mm:ss')}
+          td.text-center #{block.transactions.length}
+          td.text-center #{block.uncles.length}
   h3 Recent Transactions
   if txs.length === 0
     p No transactions during the last 10 blocks
