--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,9 +9,9 @@ html(lang="en")
     meta(name='description', content='The explorer for the Root Chain blockchain')
     meta(name='keywords', content='rootchain, explorer, blockchain, ethereum, etherchain, cryptocurrency, cryptocurrencies, bitcoin')
         
-    title Root Chain Explorer
-    
-    link(href=config.bootstrapUrl, rel="stylesheet", crossorigin="anonymous")    
+    title IPFN Blockchain Explorer
+
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     
   body
@@ -24,7 +24,7 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
           |  
-          a.navbar-brand(href='/') Root Chain
+          a.navbar-brand(href='/') IPFN Blockchain
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -52,8 +52,8 @@ html(lang="en")
             button.btn.btn-default(type='submit') Submit
     .container      
       block content
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
+    script(src='/js/jquery.js')
+    script(src='/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
     script.
       $(function () {
         $('[data-toggle="tooltip"]').tooltip()
@@ -63,5 +63,5 @@ html(lang="en")
       hr
       footer
         p  
-          a(href="https://github.com/gobitfly/etherchain-light") Root Chain
+          a(href="https://github.com/rootchain/etherchain-light") IPFN Blockchain Explorer
           |  | #{nodeStatus.version} | #{nodeStatus.nbrPeers} Peers connected
