--- a/views/layout.pug
+++ b/views/layout.pug
@@ -47,7 +47,7 @@ html(lang="en")
               
           form.navbar-form.navbar-right(action="/search", method="POST")
             .form-group
-              input.form-control#search(type='text', placeholder='Search in Root Chain...', name='search')
+              input.form-control#search(type='text', placeholder='Search...', name='search')
             |  
             button.btn.btn-default(type='submit') Submit
     .container      
