--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,39 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: black;
   background-color: white;
+  font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 200;
+}
+
+small {
+  font-weight: 200 !important;
+  vertical-align: middle;
+}
+
+.fnx {
+  vertical-align: middle;
+  padding-bottom: 3px;
+  font-size: 71% !important;
+  color: rgb(0,0,0, 0.6);
+}
+
+.nth {
+  vertical-align: middle;
+  padding-bottom: 4px;
+  font-size: 83% !important;
 }
 
 a {
   color: black;
+  text-decoration: none !important;
+}
+
+table a {
+  font-weight: 300 !important;
+  /* padding-bottom: 1px; */
+  /* border-bottom: 1px solid rgb(0,0,0,0.2); */
 }
 
 .capitalize {
@@ -59,10 +86,34 @@ th {
     color: rgb(0,0,0,0.9) !important;
 }
 
-.dropdown-menu > li > a:hover {
-    color: rgb(255,255,255,0.9) !important;
-}
-
 a:hover {
     color: rgb(0,0,0, 0.6);
+}
+
+button {
+    color: rgb(0,0,0, 0.6);
+}
+
+h3.block-title {
+  margin-top: 10px;
+  margin-bottom: 23px;
+}
+
+.navbar-nav .open a,
+.navbar-nav a:hover,
+.navbar-nav a:focus {
+  background-color: rgb(255,255,255,0.1) !important;
+}
+
+.dropdown-menu > li > a {
+  font-weight: 200;
+}
+
+.dropdown-menu > li > a:hover {
+  color: rgb(0,0,0,0.8) !important;
+  background-color: rgb(0,0,0,0.05) !important;
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+  border-color: rgb(255,255,255,0.05);
 }
