--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang="en")
     meta(name='description', content='The explorer for the Root Chain blockchain')
     meta(name='keywords', content='rootchain, explorer, blockchain, ethereum, etherchain, cryptocurrency, cryptocurrencies, bitcoin')
         
-    title IPFN Blockchain Explorer
+    title IPFN Rootchain Explorer
 
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -24,7 +24,7 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
           |  
-          a.navbar-brand(href='/') IPFN Blockchain
+          a.navbar-brand(href='/') IPFN Rootchain
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -63,5 +63,5 @@ html(lang="en")
       hr
       footer
         p  
-          a(href="https://github.com/rootchain/etherchain-light") IPFN Blockchain Explorer
+          a(href="https://github.com/rootchain/etherchain-light") IPFN Rootchain Explorer
           |  | #{nodeStatus.version} | #{nodeStatus.nbrPeers} Peers connected
