--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,43 +1,58 @@
 body {
-  padding: 50px;
-  color: black;
-  background-color: white;
-  font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 200;
+    color: black;
+    background-color: white;
+    padding-top: 80px;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 200;
+    text-rendering: optimizeLegibility;
+    line-height: 1.15;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 small {
-  font-weight: 200 !important;
-  vertical-align: middle;
+    font-weight: 200 !important;
+    vertical-align: middle;
 }
 
 .fnx {
-  vertical-align: middle;
-  padding-bottom: 3px;
-  font-size: 71% !important;
-  color: rgb(0,0,0, 0.6);
+    vertical-align: middle;
+    padding-bottom: 3px;
+    font-size: 71% !important;
+    color: rgb(0,0,0, 0.6);
+}
+
+.chng {
+    vertical-align: middle;
+    padding-bottom: 3px;
+    font-size: 82% !important;
+    color: rgb(0,0,0, 0.7);
 }
 
 .nth {
-  vertical-align: middle;
-  padding-bottom: 4px;
-  font-size: 83% !important;
+    vertical-align: middle;
+    padding-bottom: 4px;
+    font-size: 83% !important;
 }
 
 a {
-  color: black;
-  text-decoration: none !important;
+    color: black;
+    text-decoration: none !important;
 }
 
 table a {
-  font-weight: 300 !important;
-  /* padding-bottom: 1px; */
-  /* border-bottom: 1px solid rgb(0,0,0,0.2); */
+    font-weight: 300 !important;
+    /* padding-bottom: 1px; */
+    /* border-bottom: 1px solid rgb(0,0,0,0.2); */
 }
 
 .capitalize {
-  text-transform:capitalize;
+    text-transform:capitalize;
 }
 
 pre {
@@ -49,11 +64,11 @@ pre {
 }
 
 .parameter-cell {
-  white-space: pre-wrap;       /* Since CSS 2.1 */
-  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 .navbar-form {
@@ -95,35 +110,63 @@ button {
 }
 
 h3.block-title {
-  margin-top: 10px;
-  margin-bottom: 23px;
+    margin-top: 10px;
+    margin-bottom: 23px;
+}
+
+.navbar a {
+    color: rgba(255,255,255,.9) !important;
 }
 
 .navbar-nav .open a,
 .navbar-nav a:hover,
 .navbar-nav a:focus {
-  background-color: rgb(255,255,255,0.1) !important;
+    background-color: rgb(255,255,255,0.1) !important;
+}
+
+.navbar-form {
+    margin-top: 16px;
 }
 
 .dropdown-menu > li > a {
-  font-weight: 200;
+    font-weight: 200;
 }
 
 .dropdown-menu > li > a:hover {
-  color: rgb(0,0,0,0.8) !important;
-  background-color: rgb(0,0,0,0.05) !important;
+    color: rgb(0,0,0,0.8) !important;
+    background-color: rgb(0,0,0,0.05) !important;
 }
 
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-  border-color: rgb(255,255,255,0.05);
+    border-color: rgb(255,255,255,0.05);
 }
 
 ::-moz-selection {
-  color: white;
-  background: black;
+    color: white;
+    background: black;
 }
 
 ::selection {
-  color: white;
-  background: black;
+    color: white;
+    background: black;
+}
+
+@media (min-width: 768px) {
+    .navbar-nav > li > a {
+        font-size: 16px;
+        padding-top: 29.5px;
+        padding-bottom: 29.5px;
+    }
+
+    .navbar-brand {
+        font-size: 1.5rem;
+        font-weight: 200;
+        padding: 29.5px 15px;
+        text-decoration: none;
+    }
+
+    h1, .h1, h2, .h2, h3, .h3 {
+        margin-top: 26px;
+        margin-bottom: 16.5px;
+    }
 }
