--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,7 +33,7 @@ html(lang="en")
               a(href='/accounts') Accounts
             li
               a(href='/tx/pending') Pending Tx
-            li.dropdown
+            //-li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
                 | Tools
                 span.caret
