feat(account): latest transactions

--- a/views/block.pug
+++ b/views/block.pug
@@ -21,7 +21,7 @@ block content
       td 
         a(href="/block/" + block.parentHash) #{block.parentHash}
     tr
-      td Miner: 
+      td Validator: 
       td  
         a(href="/account/" + block.author) #{nameformatter.format(block.author)}
     tr
