--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
       tr
         th Number
         th.text-center Hash
-        th.text-center Miner
+        th.text-center Validator
         th.text-center Timestamp
         th.text-center # Txns
         th.text-center # Uncles
